--- a/Portfolio.html
+++ b/Portfolio.html
@@ -33,9 +33,9 @@ table {
         <h2>Save Net Neutrality</h2>
         <table border="1 px" align="center">
             <tr>
-                <td><a href="https://itsthedream.github.io/Index.html">Home</a></td>
-                <td><a href="https://itsthedream.github.io/Bio.html">Bio</a></td>
-                <td><a href="https://itsthedream.github.io/Portfolio.html">Portfolio</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Index.html">Home</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Bio.html">Bio</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Portfolio.html>Portfolio</a></td>
             </tr>
         </table>
 		<hr>
