--- a/Index.html
+++ b/Index.html
@@ -25,9 +25,9 @@ table {
         <h1>Home Page</h1>
         <table border="1 px" align="center">
             <tr>
-                <td><a href="https://itsthedream.github.io/Index.html">Home</a></td>
-                <td><a href="https://itsthedream.github.io/Bio.html">Bio</a></td>
-                <td><a href="https://itsthedream.github.io/Portfolio.html">Portfolio</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Index.html">Home</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Bio.html">Bio</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Portfolio.html>Portfolio</a></td>
             </tr>
         </table>
         <h2>Don't Look At The Picture</h2>
