--- a/Index.html
+++ b/Index.html
@@ -23,11 +23,11 @@ table {
     </head>
     <body>
         <h1>Home Page</h1>
-        <table border="1 px" align="center">
+        <table border="1 px">
             <tr>
                 <td><a href="https://idoremembermyusername.github.io/Index.html">Home</a></td>
                 <td><a href="https://idoremembermyusername.github.io/Bio.html">Bio</a></td>
-                <td><a href="https://idoremembermyusername.github.io/Portfolio.html>Portfolio</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Portfolio.html">Portfolio</a></td>
             </tr>
         </table>
         <h2>Don't Look At The Picture</h2>
