--- a/Portfolio.html
+++ b/Portfolio.html
@@ -35,7 +35,7 @@ table {
             <tr>
                 <td><a href="https://idoremembermyusername.github.io/Index.html">Home</a></td>
                 <td><a href="https://idoremembermyusername.github.io/Bio.html">Bio</a></td>
-                <td><a href="https://idoremembermyusername.github.io/Portfolio.html>Portfolio</a></td>
+                <td><a href="https://idoremembermyusername.github.io/Portfolio.html">Portfolio</a></td>
             </tr>
         </table>
 		<hr>
