--- a/Portfolio.html
+++ b/Portfolio.html
@@ -30,7 +30,7 @@ table {
     </head>
     <body>
         <h1>Portfolio</h1>
-        <h2>Save Net Neutrality</h2>
+        <h2>I see you have discovered my master plan</h2>
         <table border="1 px" align="center">
             <tr>
                 <td><a href="https://idoremembermyusername.github.io/Index.html">Home</a></td>
